# franco-1999-anisotropic-optical-waveguide-fem

./: .gitignore  AGENTS.md  CMakeLists.txt  PLANS.md  README.md
cases/: README.md  homogeneous_channel_fig1_reference_points.csv  homogeneous_channel_isotropic_case.yaml  planar_diffuse_isotropic_case.yaml  planar_diffuse_isotropic_fig2_reference_points.csv  smoke_case.yaml
docs/: 00_titulo_autores_resumo_descritores.md  01_introducao.md  02_formulacao_por_elementos_finitos.md  03_guia_de_onda_de_canal_isotropico_homogeneo.md  04_guia_de_onda_planar_difuso_isotropico.md  05_guia_de_onda_de_canal_difuso_isotropico.md  06_guia_de_onda_de_canal_difuso_anisotropico.md  07_conclusoes.md  08_referencias.md  09_resumo_dos_casos_de_teste.md  README.md
include/waveguide_solver/: app.hpp  config.hpp  dense_matrix.hpp  eigensolver.hpp  element.hpp  geometry.hpp  global_assembly.hpp  local_assembly.hpp  material.hpp  material_profile.hpp  mesh.hpp  quadrature.hpp
meshes/: README.md  channel_a2b_b1_farfield.mesh  channel_a2b_b1_reference.mesh  channel_a2b_b1_smoke.mesh  placeholder_triangle.mesh  planar_d10_a2b_coarse.mesh  planar_d10_a2b_reference.mesh  planar_d10_a2b_reference_x2y2.mesh  planar_d10_a2b_refined.mesh  planar_d10_a2b_smoke.mesh  planar_strip_3x9.mesh  planar_strip_y4_coarse.mesh  planar_strip_y4_fine.mesh  planar_strip_y6_coarse.mesh  planar_strip_y6_fine.mesh  unit_square_center.mesh
scripts/: build.sh  check_case1_pi_hypothesis.py  consolidate_case1_homogeneous_channel_sweep.py  consolidate_planar_diffuse_sweep.py  generate_case1_marcatili_reference.py  generate_planar_strip_mesh.py  investigate_case1_convergence.py  planar_exact_reference.py  plot_case1_homogeneous_channel_sweep.py  plot_planar_diffuse_sweep.py  run_case.sh  run_case1_homogeneous_channel_sweep.py  run_planar_diffuse_sweep.py
src/: app.cpp  config.cpp  dense_matrix.cpp  eigensolver.cpp  element.cpp  geometry.cpp  global_assembly.cpp  local_assembly.cpp  main.cpp  material.cpp  material_profile.cpp  mesh.cpp  quadrature.cpp
tests/: README.md  check_case1_sweep_outputs.py  check_planar_sweep_outputs.py  check_smoke_outputs.cmake  geometry_tests.cpp  global_tests.cpp
